--- a/data/components.json
+++ b/data/components.json
@@ -72,5 +72,12 @@
             "text": "Allow Leaderboard Creation",
             "function": "processBVInput('checkbox', 'allow-custom-leaderboards')"
         }
+    },
+    "file-inputs": {
+        "bv-album-art": {
+            "text": "Album Art",
+            "accept": ".png, .jpg, .jpeg",
+            "function": "updateAlbumArt(this)"
+        }
     }
 }
