Reset album art when loading a new chart
Also includes some cleanup from the previous commit

--- a/data/components.json
+++ b/data/components.json
@@ -77,7 +77,7 @@
         "bv-album-art": {
             "text": "Album Art",
             "accept": ".png, .jpg, .jpeg",
-            "function": "updateAlbumArt(this)"
+            "function": "updateAlbumArt()"
         }
     }
 }
