--- a/data/components.json
+++ b/data/components.json
@@ -78,6 +78,11 @@
             "text": "Album Art",
             "accept": ".png, .jpg, .jpeg",
             "function": "updateAlbumArt()"
+        },
+        "bv-audio-clips": {
+            "text": "Audio Clips",
+            "accept": ".mp3, .ogg",
+            "function": "updateAudioClips()"
         }
     }
 }
