--- a/data/components.json
+++ b/data/components.json
@@ -66,6 +66,10 @@
             "text": "Charter",
             "function": "processBVInput('text', 'charter')"
         },
+        "bv-difficultyRating": {
+            "text": "Difficulty Rating",
+            "function": "processBVInput('text', 'difficultyRating')"
+        },
         "dv-summary": {
             "text": "Summary",
             "function": ""
