numbers parse as numbers

--- a/data/components.json
+++ b/data/components.json
@@ -75,27 +75,27 @@
     "number-inputs": {
         "bv-difficultyRating-0": {
             "text": "Easy:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '0')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '0')"
         },
         "bv-difficultyRating-1": {
             "text": "Normal:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '1')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '1')"
         },
         "bv-difficultyRating-2": {
             "text": "Hard:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '2')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '2')"
         },
         "bv-difficultyRating-3": {
             "text": "Expert:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '3')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '3')"
         },
         "bv-difficultyRating-4": {
             "text": "XD:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '4')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '4')"
         },
         "bv-difficultyRating-5": {
             "text": "RemiXD:",
-            "function": "processBVInput('text', 'difficultyRating', 'TrackData', '5')"
+            "function": "processBVInput('number', 'difficultyRating', 'TrackData', '5')"
         }
     },
     "checkboxes": {
