various fixes and changes to difficulty boxes
refactored a lot of css
removed some css and html (for now)
shuffled a lot of basic view components and logic
added a skip to the hardcoded XD approach to diagnostics (if needed)
hard coded difficulties into their boxes

--- a/data/components.json
+++ b/data/components.json
@@ -116,8 +116,8 @@
             "function": "updateAudioClips()"
         }
     },
-    "select-inputs": {
-        "bv-category": {
+    "WAWA select-inputs": {
+        "WAWAbv-category": {
             "text": "Category",
             "options": [
                 "Track Info",
@@ -129,7 +129,7 @@
             "default": 0,
             "function": "switchToCategory"
         },
-        "bv-difficulty": {
+        "WAWAbv-difficulty": {
             "text": "Difficulty",
             "options": [
                 "Easy",
