--- a/data/components.json
+++ b/data/components.json
@@ -97,7 +97,7 @@
     "checkboxes": {
         "bv-allowCustomLeaderboardCreation": {
             "text": "Allow Leaderboard Creation",
-            "function": "processBVInput('checkbox', 'allowCustomLeaderboardCreation')"
+            "function": "processBVInput('checkbox', 'allowCustomLeaderboardCreation', 'TrackInfo')"
         }
     },
     "file-inputs": {
