--- a/data/components.json
+++ b/data/components.json
@@ -138,6 +138,11 @@
             "text": "Audio Clips",
             "accept": ".mp3, .ogg",
             "function": "updateAudioClips()"
+        },
+        "bv-import-lyrics": {
+            "text": "Import Lyrics from another chart",
+            "accept": ".srtb, .json, .zip",
+            "function": "lyricInput.click()"
         }
     },
     "WAWA select-inputs": {
