--- a/data/components.json
+++ b/data/components.json
@@ -55,6 +55,10 @@
         "dv-set-serialization": {
             "text": "Modernize note format",
             "function": "changeNoteEncodings(2)"
+        },
+        "popup": {
+            "text": "create popup",
+            "function": "popup('title', 'content', [{text: 'Cancel', action: 'closePopup()', type: 0}])"
         }
     },
     "text-inputs": {
