--- a/data/components.json
+++ b/data/components.json
@@ -55,6 +55,14 @@
         "dv-set-serialization": {
             "text": "Modernize note format",
             "function": "changeNoteEncodings(2)"
+        },
+        "dv-import": {
+            "text": "Import…",
+            "function": "mergeInput.click()"
+        },
+        "roll": {
+            "text": "!roll",
+            "function": "popupRoll()"
         }
     },
     "text-inputs": {
