misc improvements & bugfixes
should !roll popup? or toast?
should clicking the toast reroll?
double it and give it to the next person

anyway, i did a bunch of testing. fixed some unchecked issues that could come merging to/from old srtbs

--- a/data/components.json
+++ b/data/components.json
@@ -58,7 +58,7 @@
         },
         "roll": {
             "text": "!roll",
-            "function": "popupRoll()"
+            "function": "toastRoll()"
         }
     },
     "text-inputs": {
